[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virtio-drivers = { git = "https://github.com/os-module/safe-virtio-drivers.git" }
opensbi-rt = { git = "https://github.com/rcore-os/riscv-sbi-rt", branch = "old"}
spin = "0"
log = "0.4"
lose-net-stack = { path = "../", features = ["log"]}